# rnet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DATABASE.md  GUI_PLAN.md  PROTOCOLS.md  RADIO_FIRST.md  ROADMAP.md  USAGE.md
rnet/: __init__.py  __version__.py  config.py  errors.py
rnet/apps/: __init__.py  base.py  forum.py  manifest.py  sdk.py
rnet/browser/: __init__.py  model.py  view.py
rnet/cli/: __init__.py  cli.py
rnet/core/: __init__.py  events.py  node.py  sendqueue.py
rnet/db/: __init__.py  connection.py  schema.py
rnet/discovery/: __init__.py  registry.py  service.py
rnet/explorer/: __init__.py  model.py  view.py
rnet/gui/: __init__.py  app.py  bridge.py  controller.py  launch.py  rns_config.py  settings_store.py  theme.py  widgets.py  workers.py
rnet/identity/: __init__.py  identity.py  keystore.py  util.py
rnet/messaging/: __init__.py  attachments.py  group.py  mailbox.py  messenger.py  service.py  store.py  transport.py
rnet/naming/: __init__.py  records.py  registry.py  service.py
rnet/protocol/: __init__.py  capabilities.py  envelope.py  fragment.py  replay.py  wire.py
rnet/search/: __init__.py  crawler.py  indexer.py  query.py  (+2 more)
tests/: test_apps.py  test_attachments.py  test_browser.py  test_discovery.py  test_explorer.py  test_forum.py  test_group.py  test_gui.py  test_identity.py  test_messaging.py  test_naming.py  test_protocol.py  test_search.py  test_sendqueue.py  test_social.py  test_storage.py  test_web.py
testsite/: about.html  index.html  page2.html
(+26 files in other folders)
