[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnet"
version = "0.1.0"
description = "RNet — a decentralized internet layer on top of Reticulum (RNS)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RNet Project" }]
keywords = ["reticulum", "rns", "mesh", "decentralized", "delay-tolerant", "loRa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications",
]
dependencies = [
    "rns>=0.9.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
test = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
rnet = "rnet.cli:main"
rnet-gui = "rnet.gui.launch:main"

[tool.setuptools.packages.find]
include = ["rnet*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]